text overflow bug fixed

--- a/Tour-Of-Heroes/src/app/content/blog/blog.component.css
+++ b/Tour-Of-Heroes/src/app/content/blog/blog.component.css
@@ -19,3 +19,7 @@
 .blogBox {
     margin-bottom: 35px;
 }
+
+.break-word {
+    word-break: break-all;
+}
